--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -2,6 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    service.beta.openshift.io/serving-cert-secret-name: webhook-server-cert
   labels:
     app.kubernetes.io/name: service
     app.kubernetes.io/instance: webhook-service
